# CourseWork5

./: .gitignore  README.md  pyproject.toml
src/: create_alldb.py  data_class.py  database.ini  fill_alldb.py  getinfofrom_api.py  main.py  utils.py
